@@ -2,7 +2,9 @@ Source: qmidinet
 Section: sound
 Priority: extra
 Maintainer: Rui Nuno Capela <rncbc@rncbc.org>
-Build-Depends: debhelper (>= 5), libqt4-dev (>= 4.4), libasound2-dev, libjack-dev
+Build-Depends: debhelper (>= 5), automake, qtbase5-dev (>= 5.1),
+  qtbase5-dev-tools (>= 5.1), qttools5-dev-tools (>= 5.1), qtchooser,
+  libasound2-dev, libjack-dev
 Standards-Version: 3.7.2
 
 Package: qmidinet
